--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,114 +46,6 @@ services:
     ports:
       - "127.0.0.1:6379:6379"
 
-  geth:
-    image: ethereum/client-go:stable
-    ports:
-      - "127.0.0.1:8545:8545"
-      - "127.0.0.1:8551:8551"
-      - "127.0.0.1:8546:8546"
-      - "127.0.0.1:30303:30303"
-    volumes:
-      - "l1data:/datadir"
-      - "l1keystore:/keystore"
-      - "config:/config"
-    command:
-      - --keystore=/keystore
-      - --http
-      - --datadir=/datadir
-      - --http.addr=0.0.0.0
-      - --authrpc.vhosts=*
-      - --authrpc.port=8551
-      - --authrpc.addr=0.0.0.0
-      - --http.vhosts=*
-      - --http.api=engine,personal,eth,net,web3
-      - --http.corsdomain=*
-      - --ws
-      - --ws.addr=0.0.0.0
-      - --ws.api=personal,eth,net,web3,debug,txpool
-      - --allow-insecure-unlock
-      - --unlock=0x3f1Eae7D46d88F08fc2F8ed27FCb2AB183EB2d0E
-      - --password=/datadir/passphrase
-      - --authrpc.jwtsecret=/config/jwt.hex
-      - --nodiscover
-      - --syncmode=full
-      - --state.scheme=hash
-      - --dev
-      - --dev.period=1
-      - --mine
-      - --miner.etherbase=0x3f1Eae7D46d88F08fc2F8ed27FCb2AB183EB2d0E
-      - --gcmode=archive
-
-  # Creates a genesis state for the beacon chain using a YAML configuration file and
-  # a deterministic set of validators
-  # TODO: Make num validators customizable
-  create_beacon_chain_genesis:
-    image: "gcr.io/prysmaticlabs/prysm/cmd/prysmctl:latest"
-    command:
-      - testnet
-      - generate-genesis
-      - --fork=deneb
-      - --num-validators=64
-      - --genesis-time-delay=15
-      - --output-ssz=/consensus/genesis.ssz
-      - --chain-config-file=/config/prysm.yaml
-      - --geth-genesis-json-in=/config/geth_genesis.json
-      - --geth-genesis-json-out=/config/geth_genesis.json
-    volumes:
-      - "consensus:/consensus"
-      - "config:/config"
-
-  # Runs a Prysm beacon chain from a specified genesis state created in the previous step
-  # and connects to go-ethereum in the same network as the execution client.
-  # The account used in go-ethereum is set as the suggested fee recipient for transactions
-  # proposed via the validators attached to the beacon node.
-  prysm_beacon_chain:
-    image: "gcr.io/prysmaticlabs/prysm/beacon-chain:stable"
-    command:
-      - --datadir=/consensus/beacondata
-      - --rpc-port=5000
-      - --min-sync-peers=0
-      - --genesis-state=/consensus/genesis.ssz
-      - --interop-eth1data-votes
-      - --bootstrap-node=
-      - --chain-config-file=/config/prysm.yaml
-      - --rpc-host=0.0.0.0
-      - --grpc-gateway-host=0.0.0.0
-      - --chain-id=1337
-      - --execution-endpoint=http://geth:8551
-      - --accept-terms-of-use
-      - --jwt-secret=/config/jwt.hex
-      - --suggested-fee-recipient=0x000000000000000000000000000000000000dEaD
-    depends_on:
-      geth:
-        condition: service_started
-      create_beacon_chain_genesis:
-        condition: service_completed_successfully
-    ports:
-      - "127.0.0.1:5000:5000"
-      - "127.0.0.1:3500:3500"
-    volumes:
-      - "consensus:/consensus"
-      - "config:/config"
-
-  # We run a validator client with 64, deterministically-generated keys that match
-  # The validator keys present in the beacon chain genesis state generated a few steps above.
-  prysm_validator:
-    image: "gcr.io/prysmaticlabs/prysm/validator:stable"
-    command:
-      - --beacon-rpc-provider=prysm_beacon_chain:5000
-      - --datadir=/consensus/validatordata
-      - --accept-terms-of-use
-      - --interop-num-validators=64
-      - --interop-start-index=0
-      - --chain-config-file=/config/prysm.yaml
-    depends_on:
-      prysm_beacon_chain:
-        condition: service_started
-    volumes:
-      - "consensus:/consensus"
-      - "config:/config"
-
   sequencer:
     pid: host # allow debugging
     image: nitro-node-dev-testnode
@@ -168,8 +60,6 @@ services:
       - "config:/config"
       - "tokenbridge-data:/tokenbridge-data"
     command: --conf.file /config/sequencer_config.json --node.feed.output.enable --node.feed.output.port 9642  --http.api net,web3,eth,txpool,debug --node.seq-coordinator.my-url  ws://sequencer:8548 --graphql.enable --graphql.vhosts * --graphql.corsdomain *
-    depends_on:
-      - geth
 
   sequencer_b:
     pid: host # allow debugging
@@ -183,7 +73,6 @@ services:
       - "config:/config"
     command: --conf.file /config/sequencer_config.json --node.seq-coordinator.my-url ws://sequencer_b:8548
     depends_on:
-      - geth
       - redis
 
   sequencer_c:
@@ -198,7 +87,6 @@ services:
       - "config:/config"
     command: --conf.file /config/sequencer_config.json --node.seq-coordinator.my-url ws://sequencer_c:8548
     depends_on:
-      - geth
       - redis
 
   sequencer_d:
@@ -213,7 +101,6 @@ services:
       - "config:/config"
     command: --conf.file /config/sequencer_config.json --node.seq-coordinator.my-url ws://sequencer_d:8548
     depends_on:
-      - geth
       - redis
 
   staker-unsafe:
@@ -246,7 +133,6 @@ services:
       - "config:/config"
     command: --conf.file /config/poster_config.json
     depends_on:
-      - geth
       - redis
 
   poster_b:
@@ -262,7 +148,6 @@ services:
       - "config:/config"
     command: --conf.file /config/poster_config.json
     depends_on:
-      - geth
       - redis
 
   poster_c:
@@ -278,7 +163,6 @@ services:
       - "config:/config"
     command: --conf.file /config/poster_config.json
     depends_on:
-      - geth
       - redis
 
   validator:
@@ -340,7 +224,6 @@ services:
 
   tokenbridge:
     depends_on:
-      - geth
       - sequencer
     pid: host
     build:
@@ -349,14 +232,13 @@ services:
         TOKEN_BRIDGE_BRANCH: ${TOKEN_BRIDGE_BRANCH:-}
     environment:
       - ARB_URL=http://sequencer:8547
-      - ETH_URL=http://geth:8545
+      - ETH_URL=http://host.docker.internal:8545
     volumes:
       - "tokenbridge-data:/workspace"
       - /var/run/docker.sock:/var/run/docker.sock
 
   boldupgrader:
     depends_on:
-      - geth
       - sequencer
     pid: host
     build:
@@ -364,7 +246,7 @@ services:
       args:
         BOLD_CONTRACTS_BRANCH: ${BOLD_CONTRACTS_BRANCH:-}
     environment:
-      - L1_RPC_URL=http://geth:8545
+      - L1_RPC_URL=http://host.docker.internal:8545
       - L1_PRIV_KEY=0xdc04c5399f82306ec4b4d654a342f40e2e0620fe39950d967e1e574b32d4dd36
       - CONFIG_NETWORK_NAME=local
       - DEPLOYED_CONTRACTS_DIR=./scripts/files/
@@ -376,7 +258,6 @@ services:
 
   rollupcreator:
     depends_on:
-      - geth
       - sequencer
     pid: host
     build:
